--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "devDependencies": {
     "babel-plugin-syntax-function-bind": "^6.13.0",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.46.0",
     "webpack-dev-server": "^2.4.5"
   }
 }
