--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^7.1.1",
+    "axios": "^0.16.1",
     "babel-core": "^6.24.1",
     "babel-loader": "7.x",
     "babel-preset-env": "^1.4.0",
@@ -33,7 +34,9 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-plugin-syntax-function-bind": "^6.13.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "eslint": "^3.19.0",
